--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -22,7 +22,8 @@
       "login": "Đăng nhập",
       "phoneNumberFieldError": "Vui lòng nhập số điện thoại hợp lệ",
       "emailFieldError": "Vui lòng nhập địa chỉ email hợp lệ",
-      "passwordFieldError": "Mật khẩu phải có ít nhất 8 ký tự"
+      "passwordFieldError": "Mật khẩu phải có ít nhất 8 ký tự",
+      "loginError": "Thông tin đăng nhập không đúng"
     }
   }
 }
