--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -25,5 +25,8 @@
       "passwordFieldError": "Mật khẩu phải có ít nhất 8 ký tự",
       "loginError": "Thông tin đăng nhập không đúng"
     }
+  },
+  "error": {
+    "general": "Có lỗi xảy ra"
   }
 }
