add forgot-pass form

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -24,6 +24,17 @@
       "passwordFieldError": "Password must be at least 8 characters",
       "login": "Login",
       "loginError": "User credentials are incorrect"
+    },
+    "forgotPassword": {
+      "title": "Forgot password",
+      "description": "Enter your email address and we will send you a link to reset your password.",
+      "email": "Email",
+      "emailPlaceholder": "example@gmail.com",
+      "emailFieldError": "Please enter a valid email address",
+      "sendLink": "Send link",
+      "backToLogin": "Back to login",
+      "generalError": "Something went wrong",
+      "linkHasBeenSent": "Password reset link has been sent to your email address"
     }
   },
   "error": {
