--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -35,6 +35,12 @@
       "backToLogin": "Back to login",
       "generalError": "Something went wrong",
       "linkHasBeenSent": "Password reset link has been sent to your email address"
+    },
+    "logout": {
+      "title": "Logout",
+      "description": "Are you sure you want to logout?",
+      "cancel": "Cancel",
+      "logout": "Logout"
     }
   },
   "error": {
