--- a/src/languages/stream/vi.json
+++ b/src/languages/stream/vi.json
@@ -76,7 +76,7 @@
   "Leave": "Rời",
   "Leave call": "Rời cuộc gọi",
   "End call for all": "Kết thúc cuộc gọi cho mọi người",
-  "{{ direction }} fullscreen": "{{ direction }} fullscreen",
+  "{{ direction }} fullscreen": "{{ direction }} toàn màn hình",
   "{{ direction }} picture-in-picture": "{{ direction }} picture-in-picture",
 
   "Dominant Speaker": "Người nói chính",
