--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -83,7 +83,8 @@
     "selectDateTimeError": "Please select a date and time",
     "createMeetingError": "Failed to create meeting",
     "meetingCreated": "Meeting created successfully",
-    "meetingLinkCopied": "Meeting link copied to clipboard"
+    "meetingLinkCopied": "Meeting link copied to clipboard",
+    "reconnecting": "Reconnecting to room..."
   },
   "meetingSetup": {
     "setup": "Setup",
@@ -97,7 +98,9 @@
       "grid": "Grid",
       "speaker-left": "Speaker-Left",
       "speaker-right": "Speaker-Right"
-    }
+    },
+    "copyRoomLink": "Copy room link",
+    "meetingLinkCopied": "Meeting link copied to clipboard"
   },
   "personalRoom": {
     "title": "Personal Room",
