open chat history of previous meeting

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -122,7 +122,8 @@
     "play": "Play",
     "start": "Start",
     "copyLink": "Copy Link",
-    "meetingLinkCopied": "Meeting link copied to clipboard"
+    "meetingLinkCopied": "Meeting link copied to clipboard",
+    "personalMeeting": "Personal Meeting"
   },
   "upcoming": {
     "title": "Upcoming"
