add more bg effects

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -118,7 +118,8 @@
     "low": "Low",
     "medium": "Medium",
     "high": "High",
-    "none": "None"
+    "none": "None",
+    "backgroundName": "Background {index}"
   },
   "personalRoom": {
     "title": "Personal Room",
