--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -23,7 +23,32 @@
       "phoneNumberFieldError": "Vui lòng nhập số điện thoại hợp lệ",
       "emailFieldError": "Vui lòng nhập địa chỉ email hợp lệ",
       "passwordFieldError": "Mật khẩu phải có ít nhất 8 ký tự",
-      "loginError": "Thông tin đăng nhập không đúng"
+      "loginError": "Thông tin đăng nhập không đúng",
+      "dontHaveAccount": "Không có tài khoản?",
+      "signUp": "Đăng ký"
+    },
+    "signUp": {
+      "title": "Đăng ký",
+      "alreadyHaveAccount": "Đã có tài khoản?",
+      "login": "Đăng nhập",
+      "fullname": "Họ và tên",
+      "fullnamePlaceholder": "Họ và tên của bạn",
+      "fullnameFieldError": "Vui lòng nhập họ và tên của bạn",
+      "email": "Email",
+      "emailPlaceholder": "example@gmail.com",
+      "emailFieldError": "Vui lòng nhập địa chỉ email hợp lệ",
+      "password": "Mật khẩu",
+      "passwordPlaceholder": "mật khẩu của bạn",
+      "passwordFieldError": "Mật khẩu phải có ít nhất 8 ký tự",
+      "confirmPassword": "Xác nhận mật khẩu",
+      "confirmPasswordPlaceholder": "mật khẩu của bạn",
+      "confirmPasswordFieldError": "Mật khẩu phải có ít nhất 8 ký tự hoặc không khớp",
+      "confirmPasswordFieldErrorMatch": "Mật khẩu không khớp",
+      "buttonLabel": "Đăng ký",
+      "bySigningUpYouAgreeToOur": "Bằng cách đăng ký, bạn đồng ý với",
+      "termsOfService": "Điều khoản dịch vụ",
+      "privacyPolicy": "Chính sách bảo mật",
+      "and": "và"
     },
     "forgotPassword": {
       "title": "Quên mật khẩu",
@@ -95,7 +120,7 @@
     "joinMeeting": "Tham gia phòng họp",
     "copyLink": "Sao chép liên kết",
     "meetingLinkCopied": "Liên kết phòng họp đã được sao chép vào bộ nhớ tạm",
-    "update": "Cập nhật"
+    "update": "Đổi tên"
   },
   "meetingRoom": {
     "layout": {
