checking change full name in public room

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -132,7 +132,8 @@
     "copyLink": "Copy Link",
     "meetingLinkCopied": "Meeting link copied to clipboard",
     "update": "Update name",
-    "nameUpdated": "Name updated successfully"
+    "nameUpdated": "Name updated successfully",
+    "nameUpdateFailed": "Failed to update name"
   },
   "meetingRoom": {
     "layout": {
