--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -132,7 +132,8 @@
     "copyLink": "Sao chép liên kết",
     "meetingLinkCopied": "Liên kết phòng họp đã được sao chép vào bộ nhớ tạm",
     "update": "Đổi tên",
-    "nameUpdated": "Tên đã được cập nhật thành công"
+    "nameUpdated": "Tên đã được cập nhật thành công",
+    "nameUpdateFailed": "Không thể cập nhật tên"
   },
   "meetingRoom": {
     "layout": {
